 - Music Player: Add song to playlist shows mini-player in My Music
 - Music Player: Repeat All is the default playback mode for playlists
 - Music Player: Empty playlist message makes sense now
 - New: Telugu translation available for 75 million speakers
 - New: Marathi translation available for 73 million speakers
 - Translations updated: Romanian, Turkish, Finnish, Serbian, Norwegian
 - Library updates: (GDPR) applovin 8.0.1, prebid 0.3, mopub 5.0.0, flexbox 1.0.0
 - Library updates: (dev) gradle 4.8
 - Memory leak fixed on SearchHeaderBanner

FrostWire 2.0.4 build 526 - MAY/01/2018
 - New jlibtorrent 1.2.0.18-RC4
 - jlibtorrent: updated to boost 1.67.0
 - jlibtorrent: updated to OpenSSL 1.1.0h
 - jlibtorrent: fix storage initialization
 - jlibtorrent: don't perform DNS lookups for the DHT bootstrap unless DHT is enabled
 - jlibtorrent: stat files in the disk thread
 - jlibtorrent: source code cleanup, performance and stability
 - jlibtorrent: issue query block size from torrent before metadata has been received
 - jlibtorrent: source code cleanup, performance and stability
 - jlibtorrent: honor torrent abort even on file check error
 - Library updates: gms 15.0.0, re2j 1.2, applovin 8.0.0, prebid
 - Translations updated, Hungarian, Hindi
 - Music player clean up, crashes and optimizations
 - Advanced Transfer Piece viewer rendering optimizations
 - Search Filtering optimizations
 - Bug where Creative Commons features would dissapear on Plus fixed

FrostWire 2.0.3 build 521 - APR/12/2018
 - Search: Yify fixed
 - Issues with Android 8.0 notifications fixed
 - Fixes a title refresh issue on My Files when switching file types
 - Fixes a bug deleting a picture from the picture viewer screen
 - Library updates: applovin 7.8.6, gms 12.0.1
 - Translations updated: Czech, Greek, Danish
 - Performance upgrades

FrostWire 2.0.2 build 515 - MAR/26/2018
 - Application startup is faster
 - Faster YT downloads
 - Zooqle search fixes
 - TorrentDownloads search fixes